--- a/src/main/resources/templates/pages/show.html
+++ b/src/main/resources/templates/pages/show.html
@@ -14,8 +14,10 @@
 
 <a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a>
 
-<form th:method="POST" th:action="@{/{id}(id=${user.getId()})}">
-    <input type="submit" value="Delete"/>
+<form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+    <input type="hidden" name="id" th:value="${user.getId()}">
+    <button type="submit">Delete</button>
+</form>
 
 </body>
 </html>
